# ChangeLog for dev-db/postgresql-server
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-server/ChangeLog,v 1.138 2011/09/09 20:44:12 chainsaw Exp $

  09 Sep 2011; Tony Vroon <chainsaw@gentoo.org>
  postgresql-server-8.2.21-r2.ebuild, postgresql-server-8.3.15-r2.ebuild,
  postgresql-server-8.4.8-r2.ebuild, postgresql-server-9.0.4-r2.ebuild:
  Marked 8.2.21-r2, 8.3.15-r2, 8.4.8-r2 & 9.0.4-r2 stable on AMD64 based on
  arch testing by Agostino "ago" Sarubbo in bug #371763 filed by Aaron W.
  "titanofold" Swenson.

*postgresql-server-9.1_rc1 (28 Aug 2011)

  28 Aug 2011; Aaron W. Swenson <titanofold@gentoo.org>
  +postgresql-server-9.1_rc1.ebuild:
  Version bump.

  07 Aug 2011; Jeroen Roovers <jer@gentoo.org>
  postgresql-server-8.2.21-r1.ebuild, postgresql-server-8.3.15-r1.ebuild,
  postgresql-server-8.4.8-r1.ebuild, postgresql-server-9.0.4-r1.ebuild:
  Stable for HPPA (bug #371763).

  02 Aug 2011; Aaron W. Swenson <titanofold@gentoo.org>
  postgresql-server-9.0.4-r2.ebuild:
  Fixes bug 377385

*postgresql-server-9.1_beta3-r1 (02 Aug 2011)
*postgresql-server-9.0.4-r2 (02 Aug 2011)
*postgresql-server-8.4.8-r2 (02 Aug 2011)
*postgresql-server-8.3.15-r2 (02 Aug 2011)
*postgresql-server-8.2.21-r2 (02 Aug 2011)

  02 Aug 2011; Aaron W. Swenson <titanofold@gentoo.org>
  +postgresql-server-8.2.21-r2.ebuild, +postgresql-server-8.3.15-r2.ebuild,
  +postgresql-server-8.4.8-r2.ebuild, +postgresql-server-9.0.4-r2.ebuild,
  +postgresql-server-9.1_beta3-r1.ebuild:
  Fixes bug 368177 and hopefully bug 341729

  23 Jul 2011; Aaron W. Swenson <titanofold@gentoo.org>
  -postgresql-server-8.2.21.ebuild, -postgresql-server-8.3.15.ebuild,
  -postgresql-server-8.4.8.ebuild, -postgresql-server-9.0.4.ebuild,
  -postgresql-server-9.1_beta1.ebuild:
  Removing cruft

  22 Jul 2011; Mark Loeser <halcy0n@gentoo.org>
  postgresql-server-8.2.21-r1.ebuild, postgresql-server-8.3.15-r1.ebuild,